# edysquelch

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README  config.h.in  edysquelch.conf-example
src/: CMakeLists.txt  Makefile  ais.c  cJSON.c  cJSON.h  cfg.c  cfg.h  edysquelch.c  filter.c  filter.h  fingerpori.c  fingerpori.h  out_json.c  out_json.h  receiver.c  receiver.h  savetofile.c
web/: app.js
web/static/: edy.js  edysquelch.css  index.html
